--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -10,13 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
-    "@repo/ui": "workspace:*",
-    "@tanstack/react-query": "^5.0.0",
-    "@uiw/react-markdown-preview": "^5.0.6",
-    "@uiw/react-md-editor": "^4.0.6",
-    "axios": "^1.6.0",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.0.0",
+        "@repo/ui": "workspace:*",
+        "@tanstack/react-query": "^5.0.0",
+        "@uiw/react-markdown-preview": "^5.0.6",
+        "@uiw/react-md-editor": "^4.0.6",
+        "axios": "^1.6.0",
+        "clsx": "^2.0.0",
+        "echarts": "^6.0.0",
+        "echarts-for-react": "^3.0.5",
+        "framer-motion": "^10.0.0",
         "lucide-react": "^0.290.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
