--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -97,6 +97,13 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- EXIF metadata reader for photo GPS parsing -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.18.0</version>
+        </dependency>
     </dependencies>
 
     <build>
